# stellar-structure-analysis

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  stellar-graphs.pyw  stellar.cmd
configs/: pinn_training.json
data/processed/: bootstrap_summary.json  mesa_profile_500_points.csv  pinn_dataset.npz
models/: README.md
outputs/: README.md
paper_report_data/: MANIFEST.csv  METHOD_TRACEABILITY.csv  README.md
paper_report_data/00_reference/: paper_reference.json
paper_report_data/01_input/: source_manifest.csv
paper_report_data/01_part1_polytropic_indices/: global_fits.csv  global_parameters.csv  internal_consistency.csv  local_indices.csv  piecewise_fits.csv  quality_checks.csv  source_manifest.csv
paper_report_data/02_part2_physical_deviations/: deviation_summary.csv  radial_deviation_profiles.csv  radiation_error_propagation.csv
paper_report_data/03_part3_global_comparison/: anomaly_screening.csv  contribution_percentages.csv  global_residuals.csv  section_4_3_anomaly_screening.md
paper_report_data/04_deviation_drivers/: deviation_summary.csv
paper_report_data/06_uncertainty/: bootstrap_protocol.json
paper_report_data/07_machine_learning/: training_readiness.json
paper_report_data/10_monitoring/: reproducibility.json
scripts/: build_paper_report_data.py
src/: calc_polytrope.py  data_prep_mesa.py  result_saver.py
stellar_analyzer/: __init__.py  __main__.py  cli.py  ui.py  visualization.py
stellar_analyzer/core/: __init__.py  constants.py  (+9 more)
tests/: test_cli_and_pinn.py  test_paper_report_data.py  test_smoke.py
(+35 files in other folders)
